# llm_training_demo

./: .gitignore  README.md  launch_fsdp.sh  pyproject.toml  requirements.txt  train_fsdp.py  train_fsdp.python
data/: sft_en.jsonl
fsdp/: launch_script.py
pp/: ds_pp_2gpus.json  input_pipe.py  launch_pp.sh  pp_train.py  profiler.py  test_comm_hook.py
